# trellis

./: .gitignore  BENCHMARK.md  Dockerfile  EVOLUTION.md  FOLDING.md  LICENSE.md  PRODUCTION.md  README.md  pyproject.toml
analysis/: README.md  summarize_batch.py
data/: README.md
notes/: 2026-05-07-exhaustive-enumeration-plan.md  2026-05-07-lattice-protein-implementation-plan.md  2026-05-11-binding-thermodynamics.md  2026-05-11-step-4-ligand-binding.md  2026-05-12-trajectory-visualization-plan.md  2026-05-16-fitness-metric-switch-rationale.md  2026-05-16-mean-field-pruning-investigation.md  2026-05-16-numba-enumeration-plan.md  2026-05-17-fitness-metric-switch-rationale.md  2026-05-18-mean-field-pruning-results.md  2026-05-18-plotting-summary-results.md  2026-05-25-phylogeny-generation-plan.md  2026-06-01-pfix-interface-plan.md  lattice-protein-implementation-plan.md  production-run-timing.md  trajectory-visualization-plan.md
scripts/: benchmark.py  benchmark_bb_vs_enum.py  benchmark_folding.py  fold_sequence.py  generate_phylogeny.py  generate_trajectories.py  generate_trajectory.py  generate_viz_trajectory.py  inspect_shard.py  pfix_distribution.py  s3.py  scan_phylogeny_params.py  upload_to_s3.py  validate_fitness_metric.py  validate_pruning.py  visualize_trajectory.py
tests/: test_auspice_io.py  test_cache.py  test_energy.py  test_fitness.py  test_fold.py  test_fold_bb.py  test_fold_enum.py  test_generate_trajectories.py  test_genetic_code.py  test_lattice.py  test_ligand.py  test_phylogeny.py  test_sswm.py  test_trajectory_io.py
trellis/: auspice_io.py  cache.py  energy.py  fitness.py  fold.py  fold_bb.py  fold_enum.py  genetic_code.py  lattice.py  ligand.py  mj_matrix.csv  phylogeny.py  sswm.py  trajectory_io.py
viz/: README.md  index.html  (+2 more)
(+1 files in other folders)
