[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trellis"
version = "0.0.1"
description = "Lattice protein synthetic data for evolutionary trajectory models"
requires-python = ">=3.11"
dependencies = ["numpy", "numba", "zstandard"]

[project.optional-dependencies]
dev = ["pytest"]
analysis = ["matplotlib"]
s3 = ["boto3"]

[tool.setuptools.packages.find]
include = ["trellis*"]

[tool.setuptools.package-data]
trellis = ["mj_matrix.csv"]
