[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trellis-protein"
version = "0.1.0"
description = "Lattice protein synthetic data for evolutionary trajectory models"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.11"
authors = [
    {name = "Trevor Bedford"},
]
dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
    "zstandard>=0.21",
]

[project.optional-dependencies]
aws = ["boto3>=1.28"]
analysis = ["matplotlib>=3.7"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["trellis*"]

[tool.setuptools.package-data]
trellis = ["mj_matrix.csv"]
